--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,29 @@
-body {
-    background-color: #EEEEEE;
-}
-
-body.print {
-    background-color: white;
-}
-
 .newline {
     white-space: pre-line;
+}
+
+.header {
+    position: fixed;
+    height: 80px;
+    background-color: white;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+#topmost {
+    height: 80px;
+}
+
+.navbar {
+    margin-top: 12px;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+li#nav-user {
+    background-color: #E6E7EB;
+    width: 36px;
+    height: 36px;
+    text-align: center;
+    padding-top: 9px;
+    border-radius: 50%;
 }
