--- a/css/main.css
+++ b/css/main.css
@@ -44,3 +44,9 @@ li#nav-user a.dropdown-toggle::after {
     border-bottom: solid 1px blue;
     padding-bottom: 10px;
 }
+
+/*Таблица*/
+table.table button.btn-link {
+    padding: 0;
+    margin: 0;
+}
