--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     height: 80px;
     background-color: white;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+    z-index: 100;
 }
 
 #topmost {
