--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,23 @@ li#nav-user a.dropdown-toggle::after {
     display: none;
 }
 
+/*Заголовки*/
+h1 {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
+h2 {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
 /*Второе меню*/
 .nav2 {
     margin-bottom: 30px!important;
@@ -50,4 +67,18 @@ li#nav-user a.dropdown-toggle::after {
 table.table button.btn-link {
     padding: 0;
     margin: 0;
+}
+
+/*Элементы страниц*/
+.backlink {
+    margin-bottom: 35px;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px;
+}
+
+.backlink .fas {
+    font-size: 18px;
+    vertical-align: top;
+    margin-right: 5px;
 }
