--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ h1 {
     line-height: 32px;
     font-weight: 600;
     margin-top: 10px;
-    margin-bottom: 35px;
+    margin-bottom: 42px;
 }
 
 h2 {
@@ -178,16 +178,50 @@ a.btn {
     color: black;
 }
 
+button.btn-dark {
+    background-color: #121232;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-right: 32px;
+    padding-left: 32px;
+}
+
 /*Элементы страниц*/
 .backlink {
-    margin-bottom: 35px;
+    margin-top: 26px;
+    margin-bottom: 30px;
     font-size: 12px;
     font-weight: 600;
     line-height: 16px;
+    margin-left: 10px;
 }
 
 .backlink .fas {
     font-size: 18px;
     vertical-align: top;
     margin-right: 5px;
+}
+
+/*Формы*/
+label {
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 600;
+}
+
+input.form-control {
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    height: 40px;
+    border: solid 1px #A1A4B1;
+}
+
+select.form-control {
+    height: 48px!important;
+    margin-bottom: 20px!important;
 }
