--- a/css/main.css
+++ b/css/main.css
@@ -78,17 +78,18 @@ li#nav-user a.dropdown-toggle::after {
     display: none;
 }
 
-.container-fluid {
+.container-fluid.form-page {
     padding-left: 45px;
     padding-right: 95px;
 }
 
 .container-fluid.header {
+    padding-left: 45px;
     padding-right: 15px;
 }
 
 /*Заголовки*/
-h1 {
+.form-page h1 {
     font-size: 24px;
     line-height: 32px;
     font-weight: 600;
@@ -96,12 +97,19 @@ h1 {
     margin-bottom: 32px;
 }
 
-h2 {
+.form-page h2 {
     font-size: 18px;
     font-weight: 600;
     line-height: 24px;
     margin-top: 10px;
     margin-bottom: 28px;
+}
+
+.list-page h1 {
+    font-size: 32px;
+    line-height: 48px;
+    font-weight: 600;
+    padding-left: 25px;
 }
 
 /*Второе меню*/
