--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ li#nav-user a.dropdown-toggle::after {
     padding-left: 25px;
 }
 
-.btn {
+.btn:not(.btn-link) {
     font-size: 14px;
     line-height: 16px;
     font-weight: 600;
@@ -252,15 +252,20 @@ select.form-control {
 /* Выпадающее меню списка паллетов и рулонов */
 .film_menu {
     position: absolute;
-    top: 100%;
+    top: 80%;
     right: 0;
     border: solid 1px #A1A4B1;
-    padding: 10px;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: white;
     z-index: 2;
+    width: 170px;
+    display: none;
 }
 
 .film_menu .command {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
