--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,11 @@ a.black:active, a.black:hover, .black a:active, .black a:hover {
 
 .nav-link {
     padding-left: 2px!important;
-    padding-right: 45px!important;
+    margin-right: 25px;
+}
+
+.nav-link.disabled {
+    border-bottom: solid 1px blue;
 }
 
 .nav-link#navbardrop {
