--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ li#nav-user a.dropdown-toggle::after {
     display: none;
 }
 
-.container-fluid.form-page {
+.container-fluid {
     padding-left: 45px;
     padding-right: 95px;
 }
